--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,43 +1,21 @@
-name: Build and Deploy to Pages
-on:
-    push:
-        branches: ['main']
-    workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+name: Build and Deploy
+on: [push]
 permissions:
-    contents: read
-    pages: write
-    id-token: write
-
-# Allow one concurrent deployment
-concurrency:
-    group: 'pages'
-    cancel-in-progress: true
-
+  contents: write
 jobs:
-    build:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v3
-            - uses: actions/configure-pages@v1
-              id: pages
-            - uses: actions/setup-node@v3
-              with:
-                  node-version: 16
-                  cache: 'npm'
-            - run: npm ci
-            - run: npm run build
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v1
-              with:
-                  path: ./build
-    deploy:
-        runs-on: ubuntu-latest
-        needs: build
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        steps:
-            - uses: actions/deploy-pages@v1
-              id: deployment
+  build-and-deploy:
+    concurrency: ci-${{ github.ref }} # Recommended if you intend to make multiple deployments in quick succession.
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
+
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        run: |
+          npm ci
+          npm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
