--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
+		"dev": "npm run prepare && vite dev",
+		"build": "npm run prepare && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
+		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
 	"devDependencies": {
 		"@dimforge/rapier3d-compat": "^0.11.2",
+		"@smui/drawer": "^7.0.0-beta.8",
+		"@smui/list": "^7.0.0-beta.8",
+		"@smui/select": "^7.0.0-beta.8",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.5.0",
@@ -22,6 +28,7 @@
 		"@threlte/rapier": "^0.5.0",
 		"@threlte/theatre": "^0.0.2",
 		"@types/three": "^0.148.0",
+		"smui-theme": "^7.0.0-beta.8",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"svelte-sequential-preprocessor": "^1.0.0",
