--- a/package.json
+++ b/package.json
@@ -12,33 +12,31 @@
 		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
-	"devDependencies": {
+	"dependencies": {
 		"@dimforge/rapier3d-compat": "^0.11.2",
-		"@smui/button": "^7.0.0-beta.8",
-		"@smui/drawer": "^7.0.0-beta.8",
-		"@smui/list": "^7.0.0-beta.8",
-		"@smui/select": "^7.0.0-beta.8",
+		"@smui/button": "^7.0.0-beta.15",
+		"@smui/drawer": "^7.0.0-beta.15",
+		"@smui/list": "^7.0.0-beta.15",
+		"@smui/select": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
-		"@sveltejs/kit": "^1.5.0",
-		"@theatre/core": "^0.6.0",
-		"@theatre/studio": "^0.6.0",
-		"@threlte/core": "^5.0.9",
-		"@threlte/extras": "^4.9.3",
+		"@sveltejs/kit": "^1.27.4",
+		"@theatre/core": "^0.7.0",
+		"@theatre/studio": "^0.7.0",
+		"@threlte/core": "^6.1.1",
+		"@threlte/extras": "^7.5.1",
 		"@threlte/preprocess": "^0.0.2",
-		"@threlte/rapier": "^0.5.0",
-		"@threlte/theatre": "^0.0.2",
-		"@types/three": "^0.148.0",
-		"smui-theme": "^7.0.0-beta.8",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
+		"@threlte/rapier": "^1.1.3",
+		"@threlte/theatre": "^2.1.3",
+		"@types/three": "^0.157.2",
+		"smui-theme": "^7.0.0-beta.15",
+		"svelte": "^4.2.7",
+		"svelte-check": "^3.6.0",
 		"svelte-sequential-preprocessor": "^1.0.0",
-		"three": "^0.148.0",
+		"three": "^0.157.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module",
-	"dependencies": {
-	}
+	"type": "module"
 }
