--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@smui/drawer": "^7.0.0-beta.15",
 		"@smui/list": "^7.0.0-beta.15",
 		"@smui/select": "^7.0.0-beta.15",
+		"@smui/top-app-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-static": "^2.0.1",
 		"@sveltejs/kit": "^1.27.4",
@@ -29,6 +30,7 @@
 		"@threlte/rapier": "^1.1.3",
 		"@threlte/theatre": "^2.1.3",
 		"@types/three": "^0.157.2",
+		"monaco-editor": "^0.44.0",
 		"smui-theme": "^7.0.0-beta.15",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
@@ -36,7 +38,7 @@
 		"three": "^0.157.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
-		"vite": "^4.2.0"
+		"vite": "^4.3.0"
 	},
 	"type": "module"
 }
