--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
 		"@dimforge/rapier3d-compat": "^0.11.2",
 		"@smui/button": "^7.0.0-beta.15",
 		"@smui/drawer": "^7.0.0-beta.15",
+		"@smui/fab": "^7.0.0-beta.15",
+		"@smui/icon-button": "^7.0.0-beta.15",
 		"@smui/list": "^7.0.0-beta.15",
+		"@smui/menu": "^7.0.0-beta.15",
+		"@smui/menu-surface": "^7.0.0-beta.15",
 		"@smui/select": "^7.0.0-beta.15",
 		"@smui/top-app-bar": "^7.0.0-beta.15",
 		"@sveltejs/adapter-auto": "^2.0.0",
