--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.11"
 	},
-	"type": "module"
+	"type": "module",
+	"devDependencies": {
+		"@smui/card": "^7.0.0-beta.18",
+		"@smui/layout-grid": "^7.0.0-beta.18"
+	}
 }
