do not select components to edit in view mode

--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev": "npm run prepare && vite dev",
-		"build": "npm run prepare && vite build",
+		"dev": "vite dev",
+		"build": "npm run smui && vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"prepare": "npm run smui-theme-light && npm run smui-theme-dark",
+		"smui": "npm run smui-theme-light && npm run smui-theme-dark",
 		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
