--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
 	"name": "urdf-editor",
 	"version": "0.0.1",
+	"author": "Andreas Bresser <self@andreasbresser.de>",
+	"license": "BSD-3-Clause",
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
@@ -13,34 +15,31 @@
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
 	"dependencies": {
-		"@smui/button": "^7.0.0-beta.18",
-		"@smui/drawer": "^7.0.0-beta.18",
-		"@smui/fab": "^7.0.0-beta.18",
-		"@smui/icon-button": "^7.0.0-beta.18",
-		"@smui/list": "^7.0.0-beta.18",
-		"@smui/menu": "^7.0.0-beta.18",
-		"@smui/menu-surface": "^7.0.0-beta.18",
-		"@smui/select": "^7.0.0-beta.18",
-		"@smui/top-app-bar": "^7.0.0-beta.18",
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.5",
-		"@threlte/core": "^7.2.1",
-		"@threlte/extras": "^8.10.3",
-		"@types/three": "^0.163.0",
-		"monaco-editor": "^0.47.0",
-		"smui-theme": "^7.0.0-beta.18",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.0",
-		"svelte-sequential-preprocessor": "^1.0.0",
-		"three": "^0.163.0",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.11"
+		"@smui/card": "^8.0.0-beta.3",
+		"@smui/layout-grid": "^8.0.0-beta.3",
+		"@smui/button": "^8.0.0-beta.3",
+		"@smui/drawer": "^8.0.0-beta.3",
+		"@smui/fab": "^8.0.0-beta.3",
+		"@smui/icon-button": "^8.0.0-beta.3",
+		"@smui/list": "^8.0.0-beta.3",
+		"@smui/menu": "^8.0.0-beta.3",
+		"@smui/menu-surface": "^8.0.0-beta.3",
+		"@smui/select": "^8.0.0-beta.3",
+		"@smui/top-app-bar": "^8.0.0-beta.3",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.16.0",
+		"@threlte/core": "^8.0.1",
+		"@threlte/extras": "^9.0.1",
+		"@types/three": "^0.173.0",
+		"monaco-editor": "^0.52.2",
+		"smui-theme": "^8.0.0-beta.3",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.4",
+		"svelte-sequential-preprocessor": "^2.0.2",
+		"three": "^0.173.0",
+		"typescript": "^5.6.3",
+		"vite": "^6.0.0"
 	},
-	"type": "module",
-	"devDependencies": {
-		"@smui/card": "^7.0.0-beta.18",
-		"@smui/layout-grid": "^7.0.0-beta.18"
-	}
+	"type": "module"
 }
