--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
 	"dependencies": {
+		"@monaco-editor/loader": "^1.5.0",
 		"@smui/button": "^8.0.0-beta.3",
 		"@smui/card": "^8.0.0-beta.3",
 		"@smui/drawer": "^8.0.0-beta.3",
@@ -39,7 +40,7 @@
 		"svelte-sequential-preprocessor": "^2.0.2",
 		"three": "^0.173.0",
 		"typescript": "^5.6.3",
-		"urdf-viewer": "^0.0.3",
+		"urdf-viewer": "^0.0.6",
 		"vite": "^6.0.0"
 	},
 	"type": "module"
