--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
 		"urdf-viewer": "^0.1.3",
 		"vite": "^6.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"devDependencies": {
+		"svelte-splitpanes": "^8.0.9"
+	}
 }
