--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@smui/menu": "^8.0.0-beta.3",
 		"@smui/menu-surface": "^8.0.0-beta.3",
 		"@smui/select": "^8.0.0-beta.3",
+		"@smui/textfield": "^8.0.0-beta.3",
 		"@smui/top-app-bar": "^8.0.0-beta.3",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
