add dialogs for settings and delete

--- a/package.json
+++ b/package.json
@@ -18,14 +18,18 @@
 		"@monaco-editor/loader": "^1.5.0",
 		"@smui/button": "^8.0.0-beta.3",
 		"@smui/card": "^8.0.0-beta.3",
+		"@smui/dialog": "^8.0.0-beta.3",
 		"@smui/drawer": "^8.0.0-beta.3",
 		"@smui/fab": "^8.0.0-beta.3",
+		"@smui/form-field": "^8.0.0-beta.3",
 		"@smui/icon-button": "^8.0.0-beta.3",
 		"@smui/layout-grid": "^8.0.0-beta.3",
 		"@smui/list": "^8.0.0-beta.3",
 		"@smui/menu": "^8.0.0-beta.3",
 		"@smui/menu-surface": "^8.0.0-beta.3",
 		"@smui/select": "^8.0.0-beta.3",
+		"@smui/slider": "^8.0.0-beta.3",
+		"@smui/switch": "^8.0.0-beta.3",
 		"@smui/textfield": "^8.0.0-beta.3",
 		"@smui/top-app-bar": "^8.0.0-beta.3",
 		"@sveltejs/adapter-auto": "^4.0.0",
@@ -36,9 +40,9 @@
 		"monaco-editor": "^0.52.2",
 		"smui-theme": "^8.0.0-beta.3",
 		"svelte": "^5.0.0",
+		"svelte-splitpanes": "^8.0.9",
 		"three": "^0.173.0",
-		"urdf-viewer": "^0.2.3",
-		"svelte-splitpanes": "^8.0.9"
+		"urdf-viewer": "^0.2.3"
 	},
 	"type": "module",
 	"devDependencies": {
